Added readme, changed version to 1.0.0, improved texts in GUI

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,22 +1,22 @@
-msg-window-title=Circuit Logger
-msg-checkbox-trigger-on=Trigger on
-msg-checkbox-trigger-off=Trigger off
-msg-checkbox-logging-on=Logging on
-msg-checkbox-log-red=Log red wire
-msg-checkbox-log-green=Log green wire
-msg-checkbox-log-combined=Log both combined
-msg-checkbox-log-disabled=Disabled
-msg-name-caption=Name
-msg-button-save=Update
-dlg-settings=Circuit logger settings
+ccl-window-title=Circuit Logger
+ccl-checkbox-trigger-on=Start trigger
+ccl-checkbox-trigger-off=Stop trigger
+ccl-checkbox-logging-on=Logging on
+ccl-checkbox-log-red=Log red wire
+ccl-checkbox-log-green=Log green wire
+ccl-checkbox-log-combined=Log both combined
+ccl-checkbox-log-disabled=Disabled
+ccl-name-caption=Name
+ccl-button-save=Update
+ccl-dlg-settings=Circuit logger global settings
 circuit-logger-status=Status:
-status-logging=Logging
-status-stopped=Stopped
-manually-triggered=Manually
-ignored-signals-caption=Ignored signals
-signal-aliases-caption=Signal aliases
-logged-records=Logged records:
-trigger-off-after-ticks=Trigger off after (ticks): 
+ccl-status-logging=Logging
+ccl-status-stopped=Stopped
+ccl-manually-triggered=Manually
+ccl-ignored-signals-caption=Ignored signals
+ccl-signal-aliases-caption=Signal aliases
+ccl-logged-records=Logged records:
+ccl-trigger-off-after-ticks=Stop trigger after (ticks): 
 
 [item-name]
 circuit-logger=Circuit Logger
